@@ -90,12 +90,12 @@ public class CustomChangeWrapper extends AbstractChange {
         this.className = className;
             try {
                 try {
-                    customChange = (CustomChange) Class.forName(className, true, classLoader).newInstance();
+                    customChange = (CustomChange) Class.forName(className, true, classLoader).getConstructor().newInstance();
                 } catch (ClassCastException e) { //fails in Ant in particular
                     try {
-                        customChange = (CustomChange) Thread.currentThread().getContextClassLoader().loadClass(className).newInstance();
+                        customChange = (CustomChange) Thread.currentThread().getContextClassLoader().loadClass(className).getConstructor().newInstance();
                     } catch (ClassNotFoundException e1) {
-                        customChange = (CustomChange) Class.forName(className).newInstance();
+                        customChange = (CustomChange) Class.forName(className).getConstructor().newInstance();
                     }
                 }
         } catch (Exception e) {
@@ -332,7 +332,7 @@ public class CustomChangeWrapper extends AbstractChange {
 
         CustomChange customChange = null;
         try {
-            customChange = (CustomChange) Class.forName(className, false, resourceAccessor.toClassLoader()).newInstance();
+            customChange = (CustomChange) Class.forName(className, false, resourceAccessor.toClassLoader()).getConstructor().newInstance();
         } catch (Exception e) {
             throw new UnexpectedLiquibaseException(e);
         }
